kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: elgoog-backend
        image: elgoog-drive-backend:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
