kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: elgoog-frontend
        image: elgoog-drive-frontend:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
